standardize jvm server options
noticed that nginx didn't have the same jvm server options as the other
servers, which will affect benchmark results.